Fix song lyrics column layout by removing white-space: nowrap

--- a/styles.css
+++ b/styles.css
@@ -256,7 +256,6 @@ h3 {
     margin: 0 0 80px 0;
     line-height: 1.8;
     font-size: 0.95em;
-    white-space: nowrap;
 }
 
 .song-column p:not(:last-child) {
